# hf_fast_mdl

./: .gitignore  README.md  hf_fast_mdl.py  install-cli-mac.sh  pyproject.toml
